tests/ui/coercion/multistep5.stderr
error[E0055]: reached the recursion limit while auto-dereferencing `P`
  --> $DIR/multistep5.rs:83:14
   |
LL |         1 => &P      as &P,
   |              ^^^^^^^^^^^^^ deref recursion limit reached
   |
   = help: consider increasing the recursion limit by adding a `#![recursion_limit = "256"]` attribute to your crate (`multistep5`)

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0055`.
